Fixing code smells & changelog